layout problem was fix

--- a/src/app/core/_layouts/layout/layout.component.scss
+++ b/src/app/core/_layouts/layout/layout.component.scss
@@ -28,12 +28,16 @@ app-side-bar {
 }
 
 app-frame-work {
-  width: 95%;
+  width: 86%;
 }
 
 //ts config
 .page_conf {
   width: 5%;
+}
+
+.framework_conf {
+  width: 95%;
 }
 
 .tabWrapper_conf {
