--- a/src/app/frame-work/manage/shared-manage.scss
+++ b/src/app/frame-work/manage/shared-manage.scss
@@ -17,7 +17,7 @@ table {
 
 td,
 th {
-  width: 20%;
+  width: 15%;
   border: 1px solid $gray_e3;
 }
 
@@ -159,4 +159,11 @@ th {
   &:active {
     background-color: $gray_d5;
   }
+}
+
+th.mat-header-cell:first-of-type,
+td.mat-cell:first-of-type,
+td.mat-footer-cell:first-of-type {
+  padding-right: 12px;
+  padding-left: 0;
 }
